--- a/public/pages/admin/components/household.html
+++ b/public/pages/admin/components/household.html
@@ -364,9 +364,30 @@
                     <input type="date" class="form-control" name="ngayTach" required> 
                 </div>
 
-                <div class="form-group"> 
-                    <label>Địa chỉ mới <span class="required">*</span></label> 
-                    <input type="text" class="form-control" name="diaChi" required placeholder="Số nhà, đường, phường..."> 
+                <div class="section-title">2. Địa chỉ thường trú</div>
+                
+                <div class="form-grid-2"> <div class="form-group">
+                        <label>Số nhà</label>
+                        <input type="text" class="form-control" name="sonha" placeholder="Số nhà, tổ...">
+                    </div>
+                    <div class="form-group">
+                        <label>Đường / Phố / Thôn</label>
+                        <input type="text" class="form-control" name="duong" placeholder="Tên đường...">
+                    </div>
+                </div>
+
+                <div class="form-grid-3"> <div class="form-group">
+                        <label>Phường / Xã</label>
+                        <input type="text" class="form-control" name="phuong" placeholder="Phường...">
+                    </div>
+                    <div class="form-group">
+                        <label>Quận / Huyện</label>
+                        <input type="text" class="form-control" name="quan" placeholder="Quận...">
+                    </div>
+                    <div class="form-group">
+                        <label>Tỉnh / Thành phố</label>
+                        <input type="text" class="form-control" name="tinh" placeholder="Tỉnh...">
+                    </div>
                 </div>
 
                 <div class="form-group"> 
