--- a/public/pages/admin/components/resident.html
+++ b/public/pages/admin/components/resident.html
@@ -125,10 +125,6 @@
                         <label>Dân tộc</label> 
                         <input type="text" class="form-control" name="dantoc"> 
                     </div>
-                    <div class="form-group"> 
-                        <label>Tôn giáo</label> 
-                        <input type="text" class="form-control" name="tongiao"> 
-                    </div>
                 </div>
 
                 <div class="form-grid-2">
@@ -145,8 +141,8 @@
                 <div class="section-title">II. Định danh & Công việc</div>
                 <div class="form-grid-3">
                     <div class="form-group"> 
-                        <label>CCCD/CMND (Không sửa)</label> 
-                        <input type="text" class="form-control" name="cccd" readonly style="background-color: #e9ecef; cursor: not-allowed;"> 
+                        <label>CCCD/CMND</label>
+                        <input type="text" class="form-control" name="cccd">
                     </div>
                     <div class="form-group"> 
                         <label>Ngày cấp</label> 
@@ -181,11 +177,11 @@
                     <div class="form-group"> 
                         <label>Trạng thái <span class="required">*</span></label> 
                         <select class="form-control" name="trangthai" required>
-                            <option value="ThuongTru">Thường trú</option>
-                            <option value="TamTru">Tạm trú</option>
-                            <option value="TamVang">Tạm vắng</option>
-                            <option value="ChuyenDi">Chuyển đi</option>
-                            <option value="QuaDoi">Qua đời</option>
+                            <option value="Thường trú">Thường trú</option>
+                            <option value="Tạm trú">Tạm trú</option>
+                            <option value="Tạm vắng">Tạm vắng</option>
+                            <option value="Chuyển đi">Chuyển đi</option>
+                            <option value="Qua đời">Qua đời</option>
                         </select> 
                     </div>
                 </div>
