--- a/public/pages/admin/components/household.html
+++ b/public/pages/admin/components/household.html
@@ -191,7 +191,7 @@
 
                     <div class="section-title">II. Định danh & Công việc</div>
                     <div class="form-grid-3">
-                        <div class="form-group"> <label>CCCD/CMND <span class="required">*</span></label> <input type="text" class="form-control" name="cccd" required> </div>
+                        <div class="form-group"> <label>CCCD/CMND </label> <input type="text" class="form-control" name="cccd"> </div>
                         <div class="form-group"> <label>Ngày cấp</label> <input type="date" class="form-control" name="ngaycapcccd"> </div>
                         <div class="form-group"> <label>Nơi cấp</label> <input type="text" class="form-control" name="noicapcccd"> </div>
                     </div>
