--- a/public/pages/admin/components/resident.html
+++ b/public/pages/admin/components/resident.html
@@ -82,7 +82,10 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn-secondary" onclick="closeModal('addCitizenModal')">Hủy</button>
-                    <button type="submit" class="btn-primary">Lưu Mới & Thêm</button>
+                    
+                    <button type="button" class="btn-primary" onclick="createNewCitizen()">
+                        Lưu Mới & Thêm
+                    </button>
                 </div>
             </form>
         </div>
