--- a/public/pages/admin/components/household.html
+++ b/public/pages/admin/components/household.html
@@ -554,8 +554,11 @@
                         <label>Dân tộc</label> 
                         <input type="text" class="form-control" name="dantoc"> 
                     </div>
+                        <div class="form-group"> 
+                        <label>Tôn giáo</label> 
+                        <input type="text" class="form-control" name="tongiao"> 
                     </div>
-
+                </div>
                 <div class="form-grid-2">
                     <div class="form-group"> 
                         <label>Nguyên quán</label> 
