--- a/public/pages/admin/components/resident.html
+++ b/public/pages/admin/components/resident.html
@@ -129,6 +129,10 @@
                         <label>Dân tộc</label> 
                         <input type="text" class="form-control" name="dantoc"> 
                     </div>
+                    <div class="form-group"> 
+                        <label>Tôn giáo</label> 
+                        <input type="text" class="form-control" name="tongiao"> 
+                    </div>
                 </div>
 
                 <div class="form-grid-2">
